# Warehouse-Anomaly-Detection-Tail-Risk-Stress-Testing

./: README.md  README_reproducibility_section.md  anomaly-detection-scenario1.py  pyproject.toml  requirements.txt
notebooks/: anomaly-detection-scenario1.py  anomaly-detection-scenario2.py  run_src.py
results/: expected_result.txt
src/: config.py
src/backtest/: backtest.py
src/causal_engine/: causal.py
src/data/: loader.py
src/delay_simulation/: delays.py
src/global_statistics/: global_stats.py
src/hwk_bsts_forecasting/: mle_bsts.py
src/hwk_bsts_forecasting/__pycache__/: mle_bsts.run_backtest.locals.hawkes_intensity_numba-264.py311.1.nbc  mle_bsts.run_backtest.locals.hawkes_intensity_numba-264.py311.nbi  mle_bsts.run_backtest.locals.hawkes_intensity_numba-83.py311.1.nbc  mle_bsts.run_backtest.locals.hawkes_intensity_numba-83.py311.nbi
src/risk/: monte_carlo.py  var_es.py
src/utils/: io_utils.py
