[build-system]
requires = ["setuptools>=72.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "warehouse-anomaly-tail-risk"
version = "1.0.0"
description = "Tail-risk stress testing for warehouse dragon orders using EVT, Monte Carlo, and Hawkes processes"
authors = [{ name = "Pranav" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.4",
    "pandas==3.0.2",
    "scipy==1.17.1",
    "statsmodels==0.14.6",
    "matplotlib==3.10.8",
    "plotly==6.6.0",
    "numba==0.65.0",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "openpyxl==3.1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/Shridathj/Warehouse-Anomaly-Detection-Tail-Risk-Stress-Testing"
